:memo: update swagger doc
