# server/storage/api-docs/api-docs.json
@@ -493,6 +493,44 @@
             }
         },
         "/api/baraton-bars/{baratonBar}": {
+            "get": {
+                "tags": [
+                    "BaratonBars"
+                ],
+                "summary": "Get details of a Baraton Bar",
+                "operationId": "showBaratonBar",
+                "parameters": [
+                    {
+                        "name": "baratonBar",
+                        "in": "path",
+                        "description": "ID of the Baraton Bar to retrieve",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Baraton Bar details retrieved successfully"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
             "delete": {
                 "tags": [
                     "BaratonBars"
